<resources>
    <string name="app_name">WorkoutPlanner</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_finish">FINISH</string>
    <string name="screen_welcome_title">WORKOUTZ</string>
    <string name="screen_welcome_subtitle">BUILD YOUR OWN TRAININGS</string>
    <string name="screen_welcome_label_menu">MAIN MENU</string>
    <string name="screen_trainings_label_menu">TRAININGS</string>
    <string name="screen_workouts_label_menu">WORKOUTS</string>
    <string name="screen_exercises_label_menu">EXERCISES</string>

    <!--BUTTONS-->
    <string name="screen_welcome_btn_trainings">TRAINING PLANS</string>
    <string name="screen_welcome_btn_workouts">WORKOUTS</string>
    <string name="screen_welcome_btn_exercises">EXERCISES</string>

    <string name="screen_trainings_btn_create">CREATE NEW TRAINING</string>
    <string name="screen_trainings_btn_open">OPEN TRAINING</string>

    <string name="screen_workouts_btn_create">CREATE NEW WORKOUT</string>
    <string name="screen_workouts_btn_open">OPEN WORKOUT</string>

    <string name="screen_exercises_btn_create">CREATE NEW EXERCISE</string>
    <string name="screen_exercises_btn_open">OPEN EXERCISE</string>

    <string name="screen_exercises_create_standard_btn">STANDARD</string>
    <string name="screen_exercises_create_superset_btn">SUPERSET</string>
    <string name="screen_exercises_create_cardio_btn">CARDIO / TIMER</string>
    <string name="screen_exercises_create_circle_btn">CIRCLE</string>
    <string name="screen_exercises_create_tabata_btn">TABATA</string>
    <string name="screen_exercises_create_combined_btn">COMBINED</string>

    <string name="screen_seriesandreps_series">SERIES:</string>
    <string name="screen_seriesandreps_reps">REPS:</string>

    <!--CONTENT DESCRIPTIONS-->
    <string name="screen_welcome_background_cd">background image</string>

    <!-- EXERCISE SPECIFIC-->
    <string name="exercise_screen_label_create">CREATE EXERCISE</string>

    <string name="exercise_screen_select_type_num">1</string>
    <string name="exercise_screen_select_type_label">SELECT TYPE</string>

    <string name="exercise_screen_standard_basic_num">2</string>
    <string name="exercise_screen_standard_basic_label">FILL BASIC INFO</string>

    <string name="exercise_screen_standard_reps_num">3</string>
    <string name="exercise_screen_standard_reps_label">DEFINE SERIES AND REPS</string>

    <string name="exercise_screen_standard_info_num">4</string>
    <string name="exercise_screen_standard_info_label">ADD MORE INFO</string>

    <!-- PLACEHOLDERS -->
    <string name="placeholder_exercise_name">EXERCISE NAME</string>
    <string name="placeholder_exercise_description">ADD DESCRIPTION</string>



    <!-- EXERCISE TEMPLATES -->
    <string-array name="exerciseTemplates">
        <item>SELECT TEMPLATE</item>
        <item>2x6 (2 series, 6 reps per series)</item>
        <item>2x8 (2 series, 8 reps per series)</item>
        <item>2x10 (2 series, 10 reps per series)</item>
        <item>2x12 (2 series, 12 reps per series)</item>
        <item>3x6 (3 series, 6 reps per series)</item>
        <item>3x8 (3 series, 8 reps per series)</item>
        <item>3x10 (3 series, 10 reps per series)</item>
        <item>3x12 (3 series, 12 reps per series)</item>
        <item>4x6 (4 series, 6 reps per series)</item>
        <item>4x8 (4 series, 8 reps per series)</item>
        <item>4x10 (4 series, 10 reps per series)</item>
        <item>4x12 (4 series, 12 reps per series)</item>
    </string-array>

    <!-- EXERCISE BODY PARTS -->
    <string-array name="exerciseBodyParts">
        <item>SELECT BODY PART</item>
        <item>CHEST</item>
        <item>SHOULDERS</item>
        <item>BICEPS</item>
        <item>TRICEPS</item>
        <item>BACK</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
