<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/screen_welcome_btn_trainings"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/btnTrainingPlans"
            android:layout_marginTop="200dp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/txtMainTitle"
            android:fontFamily="@font/armata" android:textSize="20sp" android:background="@drawable/btn_toggle"/>
    <Button
            android:text="@string/screen_welcome_btn_workouts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnWorkouts" app:layout_constraintEnd_toEndOf="@+id/btnTrainingPlans"
            app:layout_constraintStart_toStartOf="@+id/btnTrainingPlans" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/btnTrainingPlans"
            android:fontFamily="@font/armata" android:textSize="20sp" android:background="@drawable/btn_toggle"/>
    <Button
            android:text="@string/screen_welcome_btn_exercises"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnExercises" app:layout_constraintStart_toStartOf="@+id/btnWorkouts"
            app:layout_constraintEnd_toEndOf="@+id/btnWorkouts" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/btnWorkouts"
            android:fontFamily="@font/armata" android:textSize="20sp" android:background="@drawable/btn_toggle"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/background_welcome2"
            android:id="@+id/image_welcome"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/screen_welcome_background_cd"
            android:background="@drawable/background_welcome2"/>
    <TextView
            android:text="@string/screen_welcome_title"
            android:layout_width="385dp"
            android:layout_height="55dp"
            android:id="@+id/txtMainTitle"
            android:fontFamily="@font/armata"
            android:textSize="36sp" android:textColor="@color/mainTitleText" android:textAlignment="center"
            android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="@+id/image_welcome"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/main_label"/>
    <TextView
            android:text="@string/screen_welcome_subtitle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/textView2" android:textColor="#FFFFFF"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtMainTitle"
            app:layout_constraintStart_toStartOf="@+id/txtMainTitle"
            app:layout_constraintEnd_toEndOf="@+id/txtMainTitle" android:textAlignment="center"
            android:textSize="18sp" android:fontFamily="@font/armata" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>