<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".exercise.SelectTypeActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/background_exercises"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/screen_welcome_background_cd"/>
    <TextView
            android:text="@string/exercise_screen_label_create"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/txtSubLabelExerciseCreate"
            style="@style/appSubLabel" app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/exercise_screen_select_type_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numExercisesSelectType"
            tools:text="@string/exercise_screen_select_type_num" style="@style/wizard_number"
            app:layout_constraintTop_toBottomOf="@+id/txtSubLabelExerciseCreate"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.489"/>
    <TextView
            android:text="@string/exercise_screen_select_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtExercisesSelectType" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/numExercisesSelectType"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" style="@style/wizard_label"
            app:layout_constraintHorizontal_bias="0.495"/>
</android.support.constraint.ConstraintLayout>