<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".StandardAdditionalInfoFragment"
                                                   android:id="@+id/frameLayout">

    <ImageView
            android:src="@drawable/background_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView3" android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/screen_welcome_background_cd"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="362dp" android:id="@+id/guideline6"
            android:foregroundGravity="center_horizontal"/>
    <TextView
            android:text="@string/exercise_screen_standard_info_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numExercisesSelectTemplate2"
            tools:text="@string/exercise_screen_standard_info_num" style="@style/wizard_number"
            app:layout_constraintTop_toBottomOf="@+id/txtSubLabelExerciseCreate"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="52dp"
            app:layout_constraintHorizontal_bias="0.488" android:textSize="96sp"
            android:fontFamily="@font/droid_sans_bold"/>
    <TextView
            android:text="@string/exercise_screen_standard_info_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtExercisesSelectTemplate4"
            app:layout_constraintTop_toBottomOf="@+id/numExercisesSelectTemplate2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" android:layout_marginEnd="8dp"
            style="@style/wizard_label"
            app:layout_constraintHorizontal_bias="0.421" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/exercise_screen_label_create"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/txtSubLabelExerciseCreate"
            style="@style/appSubLabel" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/placeholder_exercise_description"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:id="@+id/standard_more_info_description" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" style="@style/input_field_multiline" android:inputType="textMultiLine"
            android:textSize="20sp" app:layout_constraintHorizontal_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>