<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".StandardRepsFragment" android:id="@+id/reps_layout">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/background_exercises"
            android:id="@+id/image_select_template"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/screen_welcome_background_cd"/>
    <TextView
            android:text="@string/exercise_screen_label_create"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/txtSubLabelExerciseCreate"
            style="@style/appSubLabel" app:layout_constraintTop_toTopOf="@+id/image_select_template"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/exercise_screen_standard_reps_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numExercisesSelectTemplate"
            tools:text="@string/exercise_screen_standard_reps_num" style="@style/wizard_number"
            app:layout_constraintTop_toBottomOf="@+id/txtSubLabelExerciseCreate"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="52dp"
            app:layout_constraintHorizontal_bias="0.488" android:textSize="96sp"
            android:fontFamily="@font/droid_sans_bold"/>
    <TextView
            android:text="@string/exercise_screen_standard_reps_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtExercisesSelectTemplate" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/numExercisesSelectTemplate"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" style="@style/wizard_label"
            app:layout_constraintHorizontal_bias="0.495"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="362dp" android:id="@+id/guideline2"
            android:foregroundGravity="center_horizontal"/>
    <Button
            android:text="@string/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnStandardBasicNext" style="@style/appButton"
            android:textSize="18sp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="@+id/image_select_template"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/screen_seriesandreps_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/series_reps_series_label" style="@style/menuLabel"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent" android:textSize="24sp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/txtExercisesSelectTemplate"
            android:labelFor="@id/series_reps_series_input"/>
    <EditText
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/series_reps_series_input"
            app:layout_constraintTop_toTopOf="@+id/series_reps_series_label" style="@style/numberInput"
            app:layout_constraintBottom_toBottomOf="@+id/series_reps_series_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="24dp"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/screen_seriesandreps_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/series_reps_reps_label" app:layout_constraintStart_toStartOf="@+id/guideline4"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtExercisesSelectTemplate" style="@style/menuLabel"
            android:labelFor="@id/series_reps_reps_input"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="205dp" android:id="@+id/guideline4"/>
    <EditText
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/series_reps_reps_input"
            app:layout_constraintTop_toTopOf="@+id/series_reps_reps_label"
            app:layout_constraintBottom_toBottomOf="@+id/series_reps_reps_label" style="@style/numberInput"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:importantForAutofill="no"/>
    <ScrollView
            android:layout_width="348dp"
            android:layout_height="158dp"
            app:layout_constraintStart_toStartOf="@+id/series_reps_series_label" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/series_reps_reps_input" android:layout_marginEnd="8dp"
            android:id="@+id/series_reps_container" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/txtExercisesSelectTemplate" android:layout_marginTop="90dp"
            android:layout_marginBottom="43dp" app:layout_constraintBottom_toTopOf="@+id/btnStandardBasicNext">
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>