<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TrainingsActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/background_plans"
            android:id="@+id/trainingsBackground"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/screen_welcome_background_cd"/>
    <TextView
            android:text="@string/screen_trainings_label_menu"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/exercisesMenuLabel" android:textColor="@color/labelText"
            android:fontFamily="@font/armata" android:textAlignment="center" android:gravity="center"
            android:textSize="24sp"
            style="@style/menuLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineTrainings"/>
    <Button
            android:text="@string/screen_trainings_btn_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreateTraining"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/trainingsBackground" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:background="@drawable/button_unchecked"
            app:layout_constraintTop_toTopOf="@+id/guidelineTrainings" android:textSize="18sp"
            android:fontFamily="@font/droid_sans_bold"/>
    <Button
            android:text="@string/screen_trainings_btn_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnOpenTraining" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateTraining"
            app:layout_constraintStart_toStartOf="@+id/btnCreateTraining"
            app:layout_constraintEnd_toEndOf="@+id/btnCreateTraining" android:background="@drawable/button_unchecked"
            android:textSize="18sp" android:fontFamily="@font/droid_sans_bold"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="362dp"
            android:id="@+id/guidelineTrainings"/>
    <TextView
            android:id="@+id/txtMainTitleTrainings" style="@style/appLabel"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/trainingsBackground"
            android:layout_marginTop="56dp" android:gravity="center_vertical"
            app:layout_constraintHorizontal_bias="0.0" android:layout_width="0dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/txtSubLabelTrainings" style="@style/appSubLabel"
            app:layout_constraintEnd_toEndOf="@+id/txtMainTitleTrainings"
            app:layout_constraintStart_toStartOf="@+id/txtMainTitleTrainings"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtMainTitleTrainings"/>
</android.support.constraint.ConstraintLayout>